--- a/index.html
+++ b/index.html
@@ -459,8 +459,8 @@
                 </div>
 
                 <section class="footer bg-footerBG pt-10 text-gray-300 font-light text-md">
-                    <div class="flex justify-between mx-4 lg:mx-24 flex-row">
-                        <div class="flex lg:w-2/3">
+                    <div class="flex justify-between mx-4 lg:mx-24 flex-col lg:flex-row">
+                        <div class="flex w-full lg:w-2/3">
                     <div class="w-1/2">
                         <p class="text-white text-xl">Contact Us</p>
                         <ul class="py-5">
@@ -479,7 +479,7 @@
                         </ul>
                     </div>
                 </div>
-                    <div class="w-1/3">
+                    <div class="lg:w-1/3 border-t border-gray-400 lg:border-none lg:py-0 py-5">
                         <p class="text-white text-xl">Connect with Us</p>
                         <ul class="flex gap-2 py-5">
                             <li><img class="w-10" src="Assets/facebook.png" alt=""></li>
@@ -493,7 +493,7 @@
                     </div>
                 </div>
 
-                <div class="flex border-t gap-3 border-gray-400 py-5 mx-24 text-gray-300 text-sm">
+                <div class="flex border-t gap-5 lg:gap-3 border-gray-400 py-5 mx-4 lg:mx-24 text-gray-300 flex-wrap lg:flex-nowrap text-sm">
                     <p>Disclaimer</p>
                     <p>/</p>
                     <p>Data Protection</p>
